<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddRequestActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar7"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTitleAddRequest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="Send Request "
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="Select Type"
                        android:textColor="@color/secondarytxt"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupRequest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp">

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/req_1" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/req_2" />

                        <RadioButton
                            android:id="@+id/radioButton7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/req_3" />

                        <RadioButton
                            android:id="@+id/radioButton8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/req_4" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/title_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Main purpose"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/details_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText14"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:hint="Details"
                                android:inputType="textMultiLine"
                                android:overScrollMode="always"
                                android:scrollbarStyle="insideInset"
                                android:scrollbars="vertical" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/switch2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Private"
                            android:textOff="Private"
                            android:textOn="Public" />

                    </RadioGroup>


                    <Button
                        android:id="@+id/button16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:text="Send " />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>